[package]
name = "celestial_mechanics"
version = "0.1.0"
edition = "2021"
authors = ["SeSe008 <s.radenba@gmail.com>"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[[workspace.metadata.leptos]]
name = "celestiacl_mechanics"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.7.1", features = ["csr", "nightly"] }
leptos-chartistry = "0.2.0"
leptos_meta = "0.7.1"
leptos_router = "0.7.1"
log = "0.4.22"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement"] }
wasm-bindgen-futures = "0.4.49"
leptos_icons = "0.4.0"
icondata = "0.5.0"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }
